--- a/intro-questions/index.html
+++ b/intro-questions/index.html
@@ -12,9 +12,9 @@
         <li>I have taken a handful of HTML and CSS courses here at WashU, such as Rapid Prototype development and Web Development.</li>
         <li>I hope to learn the fundamentals of accessibility as it relates to web development.</li>
         <li>I think designing for the screen is different than paper, because there is only one size of paper typicaly. However, with digital development, there can be tons of different devices viewing your content.</li>
+        <li>A website I think exemplifies effective design is: <a>https://bigbudpress.com/</a>. </li>
+        <li>A website I think exemplifies good communication is: <a>https://www.retronator.com/</a>. </li>
         <li></li>
-        <li></li>
-        <li>A website I think exemplifies good communication is: https://www.retronator.com/. </li>
     </ul> 
 </body>
 </html>
