--- a/intro-questions/index.html
+++ b/intro-questions/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Reid Watson">
 </head>
 <body>
+    <h1>Reid Watson Intro Questions</h1>
     <ul>
         <li>Hi everyone, my name is Reid Watson. I am a Computer Science and Art double major, and I am hoping to graduate this semester. Fingers crossed!</li>
         <li>I love all sorts of web-based development, but I feel my CS classes lack a focus on audience interaction. That is why I wanted to take this class.</li>
