all but last bullet fdone

--- a/intro-questions/index.html
+++ b/intro-questions/index.html
@@ -4,6 +4,7 @@
     <title>Intro-Questions</title>
     <meta charset="UTF-8">
     <meta name="author" content="Reid Watson">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Reid Watson Intro Questions</h1>
@@ -12,9 +13,9 @@
         <li>I love all sorts of web-based development, but I feel my CS classes lack a focus on audience interaction. That is why I wanted to take this class.</li>
         <li>I have taken a handful of HTML and CSS courses here at WashU, such as Rapid Prototype development and Web Development.</li>
         <li>I hope to learn the fundamentals of accessibility as it relates to web development.</li>
-        <li>I think designing for the screen is different than paper, because there is only one size of paper typicaly. However, with digital development, there can be tons of different devices viewing your content.</li>
-        <li>A website I think exemplifies effective design is: <a>https://bigbudpress.com/</a>. </li>
-        <li>A website I think exemplifies good communication is: <a>https://www.retronator.com/</a>. </li>
+        <li>I think designing for the screen is different than paper, because there is only one size of paper typicaly. However, with digital development, there can be tons</br>of different devices viewing your content.</li>
+        <li>A website I think exemplifies effective design is the Big Bud Press shop: <a href="https://bigbudpress.com/">CLICK HERE</a>. I appreciate their use of engaging fonts, large images that span the whole</br>page, and the use of negative space surrounding important content and internal links.</li>
+        <li>A website I think exemplifies good communication is a indie gaming newsletter, Retronator: <a href="https://www.retronator.com/">CLICK HERE</a>. I choose Retronator because I like their vertically</br>scrolling design and how it imitates a newspaper. I find it easy to navigate and all the information is easily digestable.</li>
         <li></li>
     </ul> 
 </body>
