deleting lyrics page

--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Intro-Questions</title>
+    <title>Lyrics Exercise</title>
     <meta charset="UTF-8">
     <meta name="author" content="Reid Watson">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Reid Watson Intro Questions</h1>
-    <ol>
-        <li>Hi everyone, my name is Reid Watson. I am a Computer Science and Art double major, and I am hoping to graduate this semester. Fingers crossed!</li>
-        <li>I love all sorts of web-based development, but I feel my CS classes lack a focus on audience interaction. That is why I wanted to take this class.</li>
-        <li>I have taken a handful of HTML and CSS courses here at WashU, such as Rapid Prototype development and Web Development.</li>
-        <li>I hope to learn the fundamentals of accessibility as it relates to web development.</li>
-        <li>I think designing for the screen is different than paper, because there is only one size of paper typicaly. However, with digital development, there can be tons</br>of different devices viewing your content.</li>
-        <li>A website I think exemplifies effective design is the Big Bud Press shop: <a href="https://bigbudpress.com/">CLICK HERE</a>. I appreciate their use of engaging fonts, large images that span the whole</br>page, and the use of negative space surrounding important content and internal links.</li>
-        <li>A website I think exemplifies good communication is a indie gaming newsletter, Retronator: <a href="https://www.retronator.com/">CLICK HERE</a>. I choose Retronator because I like their vertically</br>scrolling design and how it imitates a newspaper. I find it easy to navigate and all the information is easily digestable.</li>
-        <li>Another website I really love, is one about one of my favorite Artist's, Aminah Robinson. This webstite uses a horizontal scrolling feature to emulate a timeline</br>of Aminah's life. It isn't the most beautiful webpage ever, but I love how it scrolls in an unconventional way. <a href="http://www.aminahsworld.org/">CLICK HERE</a></li>
-    </ol> 
+   
 </body>
 </html>
