--- a/movie-quotes/index.html
+++ b/movie-quotes/index.html
@@ -15,75 +15,68 @@
         <h2>Quotes:</h2>
 
         <h3>Scene 1</h3>
-        <ul>
-            <li class="peter">
-                Dr. Peter Venkman: "What I'd really like to do is talk to Dana. Dana? It's Peter."
-            </li>
-            <li class="dana">
-                Dana Barrett: "There is no Dana, there is only Zuul."
-            </li>
-            <li class="peter">
-                Dr. Peter Venkman: "Oh, Zuulie, you nut, now c'mon. Just relax, c'mon. I want to talk to Dana. Dana, Dana. Can I talk to Dana?"
-            </li>
-            <li class="dana">
-                Dana Barrett: [in an inhuman demonic voice] "There is no Dana, only Zuul!"
-            </li>
-            <li class="peter">
-                Dr. Peter Venkman: "What a lovely singing voice you must have."
-            </li>
-        </ul>
-
+        <span class="peter">
+            Dr. Peter Venkman: "What I'd really like to do is talk to Dana. Dana? It's Peter."
+        </span>        </br>
+        <span class="dana">
+            Dana Barrett: "There is no Dana, there is only Zuul."
+        </span>        </br>
+        <span class="peter">
+            Dr. Peter Venkman: "Oh, Zuulie, you nut, now c'mon. Just relax, c'mon. I want to talk to Dana. Dana, Dana. Can I talk to Dana?"
+        </span>        </br>
+        <span class="dana">
+            Dana Barrett: [in an inhuman demonic voice] "There is no Dana, only Zuul!"
+        </span>        </br>
+        <span class="peter">
+            Dr. Peter Venkman: "What a lovely singing voice you must have."
+        </span>        </br>
         <h3>Scene 2</h3>
-        <ul>
-            <li class="peter">
-                Dr. Peter Venkman: "This city is headed for a disaster of biblical proportions."
-            </li>
-            <li class="mayor">
-                Mayor: "What do you mean, biblical?'"
-            </li>
-            <li class="ray">
-                Dr Ray Stantz: "What he means is Old Testament, Mr. Mayor, real wrath of God type stuff."
-            </li>
-            <li class="peter">
-                Dr. Peter Venkman: "Exactly."
-            </li>
-            <li class="ray">
-                Dr Ray Stantz: "Fire and brimstone coming down from the skies! Rivers and seas boiling!"
-            </li>
-            <li class="egon">
-                Dr. Egon Spengler: "Forty years of darkness! Earthquakes, volcanoes..."
-            </li>
-            <li class="winston">
-                Winston Zeddemore: "The dead rising from the grave!"
-            </li>
-            <li class="peter">
-                Dr. Peter Venkman: "Human sacrifice, dogs and cats living together... mass hysteria!"
-            </li>
-            <li class="mayor">
-                Mayor: "All right, all right! I get the point!"
-            </li>
-        </ul>
+        <span class="peter">
+            Dr. Peter Venkman: "This city is headed for a disaster of biblical proportions."
+        </span>        </br>
+        <span class="mayor">
+            Mayor: "What do you mean, biblical?'"
+        </span>        </br>
+        <span class="ray">
+            Dr Ray Stantz: "What he means is Old Testament, Mr. Mayor, real wrath of God type stuff."
+        </span>        </br>
+        <span class="peter">
+            Dr. Peter Venkman: "Exactly."
+        </span>        </br>
+        <span class="ray">
+            Dr Ray Stantz: "Fire and brimstone coming down from the skies! Rivers and seas boiling!"
+        </span>        </br>
+        <span class="egon">
+            Dr. Egon Spengler: "Forty years of darkness! Earthquakes, volcanoes..."
+        </span>        </br>
+        <span class="winston">
+            Winston Zeddemore: "The dead rising from the grave!"
+        </span>        </br>
+        <span class="peter">
+            Dr. Peter Venkman: "Human sacrifice, dogs and cats living together... mass hysteria!"
+        </span>        </br>
+        <span class="mayor">
+            Mayor: "All right, all right! I get the point!"
+        </span>        </br>
 
         <h3>Scene 3</h3>
-        <ul>
-            <li>
-                All: [clearing away tables in the dining room to make room for the ghost trap]
-            </li>
-            <li class="ray">
-                Dr Ray Stantz: "I've gotta get this in the clear...!
-            </li>
-            <li class="ray">
-                Dr Ray Stantz: Wait, wait, wait! I've always wanted to do this...
-            </li>
-            <li class="ray">
-                [He yanks a tablecloth off of a table, overturning and shattering everything except the centerpiece in the middle]
-            </li>
-            <li class="peter">
-                Dr. Peter Venkman: [triumphantly] And the flowers are still standing!
-            </li>
-        </ul>
+        <span>
+            All: [clearing away tables in the dining room to make room for the ghost trap]
+        </span>        </br>
+        <span class="ray">
+            Dr Ray Stantz: "I've gotta get this in the clear...!
+        </span>        </br>
+        <span class="ray">
+            Dr Ray Stantz: Wait, wait, wait! I've always wanted to do this...
+        </span>        </br>
+        <span class="ray">
+            [He yanks a tablecloth off of a table, overturning and shattering everything except the centerpiece in the middle]
+        </span>        </br>
+        <span class="peter">
+            Dr. Peter Venkman: [triumphantly] And the flowers are still standing!
+        </span>        </br>
     </div>
     
-    <img src="poster.jpg" id="poster"/>
+    <img src="poster.jpg" id="poster" alt="Ghostbusters (1984) movei poster featuring Bill Murray, Dan Aykroyd, and Harold Ramis"/>
 </body>
 </html>
