added to lyrics exercise

--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -7,6 +7,61 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
+    <div id="imageCanvas">
+    </div>
+    <div id="header">
+        <h1> Summer Breeze</h1>
+        <h2> The Main Ingredient</h2>
+        <p> Summer Breeze was originally written by Dash Croft and Jimmy Seals (performed under 'Seals & Cofts'). The Main Ingredient released a cover of the song on their album Euphrates River (1974)</p>
+        <h3> Lyrics </h3>
+    </div>
+    <div id="lyricsBlock">
+        <h4>[Verse 1]</h4>
+        <p>
+            See the curtains hangin' in the window</br>
+            In the evening on a Friday night</br>
+            A little light a-shinin' through the window</br>
+            Lets me know everything's all right</br>
+            </br>
+            <h4>[Chorus]</h4>
+            Summer breeze makes me feel fine</br>
+            Blowin' through the jasmine in my mind</br>
+            Summer breeze makes me feel fine</br>
+            Blowin' though the jasmine in my mind</br>
+            </br>
+            <h4>[Verse 2]</h4>
+            See the paper layin' on the sidewalk</br>
+            A little music from the house next door</br>
+            So I walk on up to the doorstep</br>
+            Through the screen and across the floor</br>
+            </br>
+            <h4>[Chorus]</h4>
+            Summer breeze makes me feel fine</br>
+            Blowin' through the jasmine in my mind</br>
+            Summer breeze makes me feel fine</br>
+            Blowin' through the jasmine in my mind</br>
+            </br>
+            <h4>[Bridge]</h4>
+            Sweet days of summer, the jasmine's in bloom</br>
+            July is dressed up and playing her tune</br>
+            And I come home from a hard day's work</br>
+            And you're waiting there</br>
+            Not a care in the world</br>
+            </br>
+            <h4>[Verse 3]</h4>
+            See the smile awaitin' in the kitchen</br>
+            Through cookin' and the plates for two</br>
+            Feel the arms that reach out to hold me</br>
+            In the evening when the day is through</br>
+            </br>
+            <h4>[Chorus]</h4>
+            Summer breeze makes me feel fine</br>
+            Blowin' through the jasmine in my mind</br>
+            Summer breeze makes me feel fine</br>
+            Blowin' through the jasmine in my mind</br>
+        </p>
+    </div>
+    <!--The following code is not my own, it is sourced directly from Spotify-->
+    <iframe src="https://open.spotify.com/embed/track/5i6CpkeePD4aKacf0cmZqg?utm_source=generator&theme=0" width="30%" height="380" id="spotify" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 </body>
 </html>
