--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -62,7 +62,7 @@
         </p>
     </div>
 
-    <img id="coverPhoto" src="cover.jpeg" />
+    <img id="coverPhoto" src="cover.jpeg" width="600"/>
     <!--The following code is not my own, it is sourced directly from Spotify-->
     <!--<iframe src="https://open.spotify.com/embed/track/5i6CpkeePD4aKacf0cmZqg?utm_source=generator" width="100%" height="380" frameBorder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>-->
 </body>
