highlights next elements

--- a/movie-quotes/index.html
+++ b/movie-quotes/index.html
@@ -11,7 +11,7 @@
         <h1>Ghostbusters (1984)</h1>
     </div>
 
-    <div id="leftText">
+    <div class="leftText">
         <h2>Quotes:</h2>
 
         <h3>Scene 1</h3>
