--- a/recipe/in-progress/index.html
+++ b/recipe/in-progress/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img src="images/rotatedImage.jpg" id="imgMobile" />
     <header>
-        <img class="srcs" src="images/rotatedImage.jpg" />
         <h1>Earl Grey Macarons</h1>
         <p id="description">French Macarons are round, delicate, often brightly colored sandwich cookies. They are typically filled with a ganache, buttercream, or jam. The meringue cookies have a wonderfully chewy interior texture and a crisp shell. Well made macaron cookies should be perfectly round with a ruffled "skirt" along the edge where it has risen in the oven. Our macarons will be flavored with earl grey tea and filled with a honey buttercream.</p>
         <div id="info">
@@ -19,7 +19,9 @@
                 <strong>Resting Time</strong> <p> 60 mins</p>
                 <strong>Cook Time</strong> <p> 15 mins</p>
                 <strong>Total Time</strong> <p> 95 mins</p>
+                <br />
                 <strong>Yield</strong> <p> 30 macarons</p>
+                <br />
                 <small>Src: <a href="https://kitchen335co.com/earl-grey-french-macarons/">Kitchen 335</a></small>
 
             </div>
@@ -46,19 +48,18 @@
             </div>
 
         </div>
-        <div id="tips">
-            <strong>Tips For Success</strong>
-            <ol>
-                <li>If possible, make your macarons on a less humid day. You will need to rest the macarons for longer and they might not turn out as well on a humid day.</li>
-                <li>Don’t over-mix the batter. You only need to macaronage until you can make a figure 8 with the batter. If you over-mix the macarons will spread too much.</li>
-                <li>Wipe the bowl down with vinegar before adding the egg whites to whip. Even a speck of leftover dish soap or fat (egg yolk, butter, etc.) will inhibit the egg whites from whipping up properly.</li>
-                <li>Let the macarons rest before eating. Macarons are best when they have matured for 12 or so hours. So after you fill the macarons, let them rest overnight for the best flavor.</li>
-            </ol>
-        </div>
-
-
-
     </header>
+    <img src="images/coverPhoto.jpg" id="imgDesktop" />
+    <div id="tips">
+        <strong>Tips For Success</strong>
+        <ol>
+            <li>If possible, make your macarons on a less humid day. You will need to rest the macarons for longer and they might not turn out as well on a humid day.</li>
+            <li>Don’t over-mix the batter. You only need to macaronage until you can make a figure 8 with the batter. If you over-mix the macarons will spread too much.</li>
+            <li>Wipe the bowl down with vinegar before adding the egg whites to whip. Even a speck of leftover dish soap or fat (egg yolk, butter, etc.) will inhibit the egg whites from whipping up properly.</li>
+            <li>Let the macarons rest before eating. Macarons are best when they have matured for 12 or so hours. So after you fill the macarons, let them rest overnight for the best flavor.</li>
+        </ol>
+    </div>
+
 
     <div id="instructions">
         <h2>Instructions</h2>
@@ -87,8 +88,8 @@
             </ol>
         </div>
 
+        <h3>For Buttercream:</h3>
         <div class="step" id="step3">
-            <h3>For Buttercream:</h3>
             <img class="srcs" src="images/image8.jpeg" />
             <ol>
                 <li>In a medium bowl with a hand mixer, beat the butter until it is very soft and creamy.</li>
@@ -98,9 +99,9 @@
             </ol>
         </div>
 
+        <h3>Assembly:</h3>
         <div class="step" id="step4">
             <img class="srcs" src="images/image1.jpeg" />
-            <h3>Assembly:</h3>
             <ol>
                 <li>Transfer the American buttercream frosting to a piping bag fitted with a piping tip.</li>
                 <li>Pipe your desired amount of frosting on the inside of one macaron shell. Place another macaron shell on top.</li>
@@ -108,8 +109,8 @@
             </ol>
         </div>
 
+        <h3>Storing:</h3>
         <div class="step" id="step5">
-            <h3>Storing:</h3>
             <p>
                 If you wish to keep them more than a day before serving, freeze them. They will keep well for about two weeks. Just pull them out of the freezer about an hour before you are ready to serve them and they will thaw out perfectly.
             </p>
